<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ShoeDetailFragment">


    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="100dp"
            android:text="@string/shoe_name_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/company_text_view"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text_view" />

        <TextView
            android:id="@+id/shoe_size_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/shoe_size_text_view"
            app:layout_constraintStart_toStartOf="@+id/company_text_view"
            app:layout_constraintTop_toBottomOf="@+id/company_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/description_text_view"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_text_view"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text_view" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/shoe_name_edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_text_view"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_text_view" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/company_edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit_text"
            app:layout_constraintTop_toTopOf="@+id/company_text_view" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_size_edit_text_hint"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintStart_toStartOf="@+id/company_edit_text"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_text_view" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={shoe.description}"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edit_text"
            app:layout_constraintTop_toTopOf="@+id/description_text_view" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="150dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>